Dynegy/src/objects/Meter__c.object
<CustomObject>
    <description>Custom Object for Meter</description>
    <fields>
        <fullName>By_Pass_Trigger__c</fullName>
        <defaultValue>false</defaultValue>
        <label>By Pass Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Change_Reason_Code__c</fullName>
        <label>Change Reason Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Change_Reason__c</fullName>
        <label>Change Reason</label>
        <picklist>
            <picklistValues>
                <fullName>ESP Rate Code</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ESP Rate Sub Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LDC Rate Code</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LDC Rate Sub Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LDC Read Cycle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Load Profile</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MDMA Attributes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Meter Addition</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Meter Attributes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Meter Billing Option</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Meter Change Notification</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Meter Exchange</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Meter Installer Attributes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Meter Multiplier</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Meter Number of Dials</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Meter Owner Attributes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Meter Reader Attributes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Meter Removal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Meter Service Delivery Point</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Meter Type</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MSP Attributes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Cogeneration_Capability_Code__c</fullName>
        <label>Cogeneration Capability Code</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Delivery_Voltage__c</fullName>
        <description>This field is created during the iAve Conversion</description>
        <label>Delivery Voltage</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Distribution_Loss_Factor__c</fullName>
        <label>Distribution Loss Factor</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ESP_Budget_Amount__c</fullName>
        <label>ESP Budget Amount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <description>End Date for Meter Object</description>
        <inlineHelpText>Meter</inlineHelpText>
        <label>Meter End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Interval__c</fullName>
        <description>Interval Values for Meter Object</description>
        <inlineHelpText>Meter Object</inlineHelpText>
        <label>Interval</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LDC_Account_Id__c</fullName>
        <formula>Service_Point__r.LDC_Account_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LDC Account Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LDC_Meter_Cycle__c</fullName>
        <label>LDC Meter Cycle</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LDC_Rate_Class__c</fullName>
        <label>LDC Rate Class</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LDC_Rate_Subclass__c</fullName>
        <label>LDC Rate Subclass</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_ID__c</fullName>
        <label>Legacy ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Load_Profile_Description__c</fullName>
        <label>Load Profile Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Load_Profile__c</fullName>
        <description>Load Profile for Meter object</description>
        <inlineHelpText>Meter Object</inlineHelpText>
        <label>Load Profile</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Meter_Maintenance_Code__c</fullName>
        <label>Meter Maintenance Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Meter_Multiplier_Quantity__c</fullName>
        <label>Meter Multiplier Quantity</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Meter_Number__c</fullName>
        <externalId>true</externalId>
        <label>Meter Number</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Meter_Service_Voltage__c</fullName>
        <label>Meter Service Voltage</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Meter_Type_Code__c</fullName>
        <label>Meter Type Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_Of_Dials_Quantity__c</fullName>
        <label>Number Of Dials Quantity</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Old_Meter_Number__c</fullName>
        <externalId>true</externalId>
        <label>Old Meter Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Point_Number__c</fullName>
        <description>This field is created during the iAve Conversion.</description>
        <label>EDI Service Point Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Point__c</fullName>
        <label>Service Point</label>
        <referenceTo>Service_Point__c</referenceTo>
        <relationshipLabel>Meters</relationshipLabel>
        <relationshipName>Meters</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <description>Start Date for Meter</description>
        <label>Meter Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Time_Of_Use_Metering__c</fullName>
        <label>Time Of Use Metering</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unit__c</fullName>
        <label>Unit</label>
        <picklist>
            <picklistValues>
                <fullName>CCF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dth</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>kVA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>kVAR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KVARD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>kVARh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>kW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>kWh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MCF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Megawatt Demand</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Megawatt House</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Therms</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Meter</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>M-{0000}</displayFormat>
        <label>Meter</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Meters</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>